roles/kubernetes/kubevirt/files/cdiNetworkPolicy.yaml
# INTEL CONFIDENTIAL
#
# Copyright 2021 Intel Corporation.
#
# This software and the related documents are Intel copyrighted materials, and your use of
# them is governed by the express license under which they were provided to you ("License").
# Unless the License provides otherwise, you may not use, modify, copy, publish, distribute,
# disclose or transmit this software or the related documents without Intel's prior written permission.
#
# This software and the related documents are provided as is, with no express or implied warranties,
# other than those that are expressly stated in the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cdi-upload-proxy-policy
  namespace: default
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: cdi
    ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app: containerized-data-importer
  policyTypes:
  - Ingress
